[package]
name = "kata-hexagonal"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
sha2 = "0.10.8"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.9"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
